Fixed CSS issues with column backgrounds obscuring content by having segment content have a defined z-index and relative positioning, re-enabled rendering of column backgrounds

--- a/app/assets/stylesheets/layout-editor.scss
+++ b/app/assets/stylesheets/layout-editor.scss
@@ -95,10 +95,6 @@
     opacity: 1;
   }
 }
-.section-list-item .segment-content {
-  position: relative;
-  z-index: 0;
-}
 .section-list-item .segment.active,
 .section-list-item .segment.disabled {
   .segment-content { outline: none; }
