--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -199,6 +199,8 @@
   background-color: transparent;
 }
 .segment-content {
+  position: relative;
+  z-index: 0;
   line-height: 1.4; // default to sane value for summernote
 }
 
